--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_bar_menu" />
+            app:menu="@menu/bottom_navigation_bar_menu" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
