--- a/app/src/main/res/menu/bottom_navigation_bar_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar_menu.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/popularFragment"
+        android:enabled="true"
+        android:icon="@drawable/ic_cash"
+        android:title="@string/popular" />
+    <item
+        android:id="@+id/favoritesFragment"
+        android:enabled="true"
+        android:icon="@drawable/ic_favorites"
+        android:title="@string/favorites" />
 
 </menu>
