--- a/app/src/main/res/layout/popular_fragment.xml
+++ b/app/src/main/res/layout/popular_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -11,10 +12,15 @@
         android:layout_height="match_parent"
         tools:context=".ui.fragments.popularfragment.PopularFragment">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="pop fram" />
+        <AutoCompleteTextView
+            android:id="@+id/currencies_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/ic_drop_down"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="@string/type_currency"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
